--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="./files/screen.css">
   <link rel="stylesheet" type="text/css" media="print" href="./files/print.css">
-<title>New Custom Object Checklist (created with Checklist Generator by Andreas Schamanek)</title>
+<title>New Custom Object Checklist </title>
 </head>
 <body>
 <h1 id="clg_heading">New Custom Object Checklist</h1>
